@@ -1,65 +1,39 @@
-<Entity>
-
-    <!-- Custom Boss HP Bar -->
-    <LuaComponent
-        script_source_file="mods/purgatory/files/test/test_script.lua"
-        execute_every_n_frame="1"
-        ></LuaComponent>
-
-    <VariableStorageComponent
-        name="boss_bar_outline"
-        value_string="mods/purgatory/files/ui_gfx/boss_bars/boss_alchemist_outline.png"
-        >
-    </VariableStorageComponent>
-
-    <VariableStorageComponent
-        name="boss_bar_fill"
-        value_string="mods/purgatory/files/ui_gfx/boss_bars/boss_alchemist_fill.png"
-        >
-    </VariableStorageComponent>
-
-    <VariableStorageComponent
-        name="boss_bar_position"
-        value_string="CENTER"
-        >
-    </VariableStorageComponent>
-
-    <VariableStorageComponent
-        name="boss_name"
-        value_string="Pilferialkemisti"
-        >
-    </VariableStorageComponent>
-    <!-- /Custom Boss HP Bar -->
-
-    <SpriteComponent
-        image_file="mods/purgatory/files/entities/misc/test_sprite.xml"
-        offset_x="0"
-        offset_y="0"
-        >
-    </SpriteComponent>
-
-    <DamageModelComponent 
-            hp="100"
-			ragdoll_filenames_file=""
-			blood_material="slime"
-			blood_spray_material="slime"
-			blood_sprite_directional="data/particles/bloodsplatters/bloodsplatter_directional_purple_$[1-3].xml"
-			blood_sprite_large="data/particles/bloodsplatters/bloodsplatter_purple_$[1-3].xml"
-			ragdoll_offset_y="-14"
-			fire_probability_of_ignition="0"
-			ragdoll_fx_forced="DISINTEGRATED"
-			ragdoll_material="rock_static_glow"
-			critical_damage_resistance="0.8"
-			physics_objects_damage="0"
-			air_needed="0" 
+<Entity name="test_book" tags="scroll">
+	<Base file="data/entities/items/books/base_book.xml">
+		<BookComponent
+			_enabled="0"
 			>
-			<damage_multipliers
-			slice="0.0"
-			projectile="0.3"
-			electricity="0.6"
-			fire="0.4"
-			>
-			</damage_multipliers>
-		</DamageModelComponent>
+		</BookComponent>
 
+		<ParticleEmitterComponent 
+		    emitted_material_name="spark_purple"
+		>
+	    </ParticleEmitterComponent>
+		
+		<PhysicsImageShapeComponent 
+			image_file="mods/purgatory/files/props_gfx/skully_book_shape.png"
+		></PhysicsImageShapeComponent>
+
+		<UIInfoComponent
+			name="$booktitle_skully_game"
+			>
+		</UIInfoComponent>
+		
+		<ItemComponent
+			ui_sprite="mods/purgatory/files/props_gfx/skully_book.png"
+			item_name="$booktitle_skully_game"
+			ui_description="$bookdesc_skully_game"
+			>
+		</ItemComponent>
+
+		<SpriteComponent
+			image_file="mods/purgatory/files/props_gfx/skully_book_inhand.png"
+		></SpriteComponent>
+		
+		<AbilityComponent
+			ui_name="$booktitle_skully_game"
+			>
+		</AbilityComponent>
+
+	</Base>
 </Entity>
